--- a/layouts/index.html
+++ b/layouts/index.html
@@ -55,6 +55,14 @@
         <!-- Projects-->
         {{ with site.Data.homepage.projects }}
         <section class="projects-section bg-light" id="projects">
+
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
+                    <iframe width="560" height="432" src="https://www.youtube.com/embed/f3xVDHULZMc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="container px-4 px-lg-5">&nbsp;</div>
+
             <div class="container px-4 px-lg-5">
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
                     <div class="col-lg-6"><img class="img-fluid" src="{{ .card1.img }}" alt="..." /></div>
@@ -110,6 +118,7 @@
                         <h2 class="text-white mb-5">Tour</h2>
                         <h5><em>Performing the album in its entirety:</em></h5>
                         <p>Thursday, May 18th, Somervilla, MA <br />Crystal Ballroom</p>
+                        <p>Friday, May 19 <br/> Racket, New York City</p>
                     </div>
                 </div>
             </div>
