--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3041,21 +3041,21 @@ textarea.form-control-lg {
 .btn-primary:hover {
   color: #fff;
   background-color: #c77e20;
-  border-color: #50817e;
+  border-color: #817e50;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
-  background-color: #558985;
-  border-color: #50817e;
-  box-shadow: 0 0 0 0.25rem rgba(123, 175, 172, 0.5);
+  background-color: #888955;
+  border-color: #817750;
+  box-shadow: 0 0 0 0.25rem rgba(175, 164, 123, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #50817e;
-  border-color: #4b7976;
+  background-color: #817a50;
+  border-color: #79794b;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(123, 175, 172, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(175, 164, 123, 0.5);
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
@@ -3095,32 +3095,32 @@ textarea.form-control-lg {
 
 .btn-success {
   color: #000;
-  background-color: #67c29c;
-  border-color: #67c29c;
+  background-color: #bcc267;
+  border-color: #c1c267;
 }
 .btn-success:hover {
   color: #000;
-  background-color: #7ecbab;
-  border-color: #76c8a6;
+  background-color: #cbbe7e;
+  border-color: #c8b676;
 }
 .btn-check:focus + .btn-success, .btn-success:focus {
   color: #000;
-  background-color: #7ecbab;
-  border-color: #76c8a6;
-  box-shadow: 0 0 0 0.25rem rgba(88, 165, 133, 0.5);
+  background-color: #cbbd7e;
+  border-color: #c8af76;
+  box-shadow: 0 0 0 0.25rem rgba(165, 151, 88, 0.5);
 }
 .btn-check:checked + .btn-success, .btn-check:active + .btn-success, .btn-success:active, .btn-success.active, .show > .btn-success.dropdown-toggle {
   color: #000;
-  background-color: #85ceb0;
-  border-color: #76c8a6;
+  background-color: #cec485;
+  border-color: #c8c176;
 }
 .btn-check:checked + .btn-success:focus, .btn-check:active + .btn-success:focus, .btn-success:active:focus, .btn-success.active:focus, .show > .btn-success.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(88, 165, 133, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(165, 153, 88, 0.5);
 }
 .btn-success:disabled, .btn-success.disabled {
   color: #000;
-  background-color: #67c29c;
-  border-color: #67c29c;
+  background-color: #c2bc67;
+  border-color: #c2b767;
 }
 
 .btn-info {
@@ -3135,14 +3135,14 @@ textarea.form-control-lg {
 }
 .btn-check:focus + .btn-info, .btn-info:focus {
   color: #fff;
-  background-color: #1891a7;
-  border-color: #16899d;
-  box-shadow: 0 0 0 0.25rem rgba(62, 184, 205, 0.5);
+  background-color: #a78a18;
+  border-color: #9d8916;
+  box-shadow: 0 0 0 0.25rem rgba(205, 195, 62, 0.5);
 }
 .btn-check:checked + .btn-info, .btn-check:active + .btn-info, .btn-info:active, .btn-info.active, .show > .btn-info.dropdown-toggle {
   color: #fff;
-  background-color: #16899d;
-  border-color: #158093;
+  background-color: #9d8716;
+  border-color: #937e15;
 }
 .btn-check:checked + .btn-info:focus, .btn-check:active + .btn-info:focus, .btn-info:active:focus, .btn-info.active:focus, .show > .btn-info.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.25rem rgba(62, 184, 205, 0.5);
@@ -3351,7 +3351,7 @@ textarea.form-control-lg {
   border-color: #c47f10;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(100, 161, 157, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(161, 155, 100, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
   color: #c47f10;
@@ -3393,7 +3393,7 @@ textarea.form-control-lg {
   border-color: #67c29c;
 }
 .btn-check:focus + .btn-outline-success, .btn-outline-success:focus {
-  box-shadow: 0 0 0 0.25rem rgba(103, 194, 156, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(194, 182, 103, 0.5);
 }
 .btn-check:checked + .btn-outline-success, .btn-check:active + .btn-outline-success, .btn-outline-success:active, .btn-outline-success.active, .btn-outline-success.dropdown-toggle.show {
   color: #000;
@@ -3401,10 +3401,10 @@ textarea.form-control-lg {
   border-color: #67c29c;
 }
 .btn-check:checked + .btn-outline-success:focus, .btn-check:active + .btn-outline-success:focus, .btn-outline-success:active:focus, .btn-outline-success.active:focus, .btn-outline-success.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(103, 194, 156, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(194, 191, 103, 0.5);
 }
 .btn-outline-success:disabled, .btn-outline-success.disabled {
-  color: #67c29c;
+  color: #c2bc67;
   background-color: transparent;
 }
 
@@ -3418,7 +3418,7 @@ textarea.form-control-lg {
   border-color: #1cabc4;
 }
 .btn-check:focus + .btn-outline-info, .btn-outline-info:focus {
-  box-shadow: 0 0 0 0.25rem rgba(28, 171, 196, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(196, 162, 28, 0.5);
 }
 .btn-check:checked + .btn-outline-info, .btn-check:active + .btn-outline-info, .btn-outline-info:active, .btn-outline-info.active, .btn-outline-info.dropdown-toggle.show {
   color: #fff;
@@ -3426,7 +3426,7 @@ textarea.form-control-lg {
   border-color: #1cabc4;
 }
 .btn-check:checked + .btn-outline-info:focus, .btn-check:active + .btn-outline-info:focus, .btn-outline-info:active:focus, .btn-outline-info.active:focus, .btn-outline-info.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(28, 171, 196, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(196, 176, 28, 0.5);
 }
 .btn-outline-info:disabled, .btn-outline-info.disabled {
   color: #1cabc4;
@@ -4205,6 +4205,7 @@ textarea.form-control-lg {
   border: 1px solid transparent;
   border-radius: 0.25rem;
   transition: box-shadow 0.15s ease-in-out;
+  text-transform: uppercase;
 }
 @media (prefers-reduced-motion: reduce) {
   .navbar-toggler {
@@ -11612,13 +11613,14 @@ body {
   background: linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
   text-transform: uppercase;
   color: var(--bs-light);
-  padding-bottom: 1rem;
+  padding-bottom: 5rem;
 }
 
 .tour-section p {
+  padding-top: 1rem;
   font-family: var(--bs-font-sans-serif);
   font-size: 1.75rem;
-  margin-bottom: 5.5rem;
+  margin-bottom: 1.5rem;
 }
 
 
@@ -11642,7 +11644,7 @@ body {
 }
 
 .projects-section {
-  padding: 10rem 0;
+  padding: 5rem 0;
 }
 .projects-section .featured-text {
   padding: 2rem;
