--- a/layouts/index.html
+++ b/layouts/index.html
@@ -117,7 +117,7 @@
                         <i class="fa fa-calendar fa-2x mb-2 text-white" aria-hiden="true"></i>
                         <h2 class="text-white mb-5">Tour</h2>
                         <h5><em>Performing the album in its entirety:</em></h5>
-                        <p>Thursday, May 18th, Somervilla, MA <br />Crystal Ballroom</p>
+                        <p>Thursday, May 18th, Somerville, MA <br />Crystal Ballroom</p>
                         <p>Friday, May 19 <br/> Racket, New York City</p>
                     </div>
                 </div>
