--- a/layouts/index.html
+++ b/layouts/index.html
@@ -118,7 +118,7 @@
                         <h2 class="text-white mb-5">Tour</h2>
                         <h5><em>Performing the album in its entirety:</em></h5>
                         <p>Thursday, May 18th, Somerville, MA <br />Crystal Ballroom</p>
-                        <p>Friday, May 19 <br/> Racket, New York City</p>
+                        <p>Friday, May 19th, New York, NY<br/> Racket</p>
                     </div>
                 </div>
             </div>
