update tour dates, use new e-mail signup

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -116,9 +116,9 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="fa fa-calendar fa-2x mb-2 text-white" aria-hiden="true"></i>
                         <h2 class="text-white mb-5">Tour</h2>
-                        <h5><em>Performing the album in its entirety:</em></h5>
-                        <p>Thursday, May 18th, Somerville, MA <br />Crystal Ballroom</p>
-                        <p>Friday, May 19th, New York, NY<br/> Racket</p>
+                        <h5><em>Joe Pernice solo dates:</em></h5>
+                        <p>Friday, July 28th, Troy, NY <br /><a href="https://www.eventbrite.com/e/joe-pernice-print-shop-concert-tickets-662332533437">Ready Mix Design + Letterpress</a></p>
+                        <p>Sunday, July 30th, Dorchester, MA<br/> <a href="https://www.eventbrite.com/e/649660832037">Living Room Concert</a></p>
                     </div>
                 </div>
             </div>
@@ -131,21 +131,7 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                        <form class="form-signup" id="contactForm" data-sb-form-api-token="{{ site.Params.sbtoken }}">
-                            <div class="row input-group-newsletter">
-                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
-                                <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
-                            </div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.</div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div>
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3 mt-2 text-white">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                </div>
-                            </div>
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
-                        </form>
-                    </div>
+                        <iframe src="https://ashmont.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>                    </div>
                 </div>
             </div>
         </section>
